<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/Widget.MyApp.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="?android:listSeparatorTextViewStyle"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_version"
            android:textSize="22sp"
            android:layout_margin="5dp"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:listSeparatorTextViewStyle"
        >
        <TextView
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_detail_about_us"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="9dp"
            android:layout_marginBottom="20dp"


            />

    </LinearLayout>



</LinearLayout>