<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/notification_id"


    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_notification"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/Widget.MyApp.ActionBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:listSeparatorTextViewStyle"
        >




        <TextView
            android:id="@+id/setting_stretching_text_message"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/new_message_notification"
            android:layout_margin="10dp"
            android:textSize="22sp"
            />



        <Switch
            android:id="@+id/setting_stretching_switch_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="true"
            />



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/setting_stretching_text_ring_tone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:text="@string/ringtone"
            />

        <TextView
            android:id="@+id/setting_stretching_text_ring_tone_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:text="@string/ringtone_name"/>


        <!--<ListView-->
        <!--android:id="@+id/listview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->

        <!--&gt;-->

        <!--</ListView>-->


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >




        <TextView
            android:id="@+id/setting_stretching_text_vibrate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/vibrate"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="18dp"
            android:textSize="22sp"

            />



        <Switch
            android:id="@+id/setting_switch_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="true"

            />



    </RelativeLayout>


</LinearLayout>
