<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_set_time"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/Widget.MyApp.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="?android:listSeparatorTextViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clock_show"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="18dp"
                    android:text="@string/set_time_in_working"/>
                <TextView
                    android:id="@+id/txt_time_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:textSize="16dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_show"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_day_in_working"
                    android:textSize="18dp"
                    android:layout_marginLeft="21dp"
                    />

                <TextView
                    android:id="@+id/txt_set_day"
                    android:textSize="16dp"
                    android:layout_marginLeft="26dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alarm_show"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_alert_in_working"
                    android:textSize="18dp"
                    android:layout_marginLeft="21dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txt_length_Alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:textSize="18dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:layout_marginLeft="9dp"
                        android:text="minutes"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:textSize="20sp"
                android:id="@+id/button_solve"
                android:background="@color/colorAccent"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_margin="10dp"
                android:textColor="@color/colorWhite"

                />

            <Button
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/cancel"
                android:layout_margin="10dp"/>

        </LinearLayout>



    </RelativeLayout>


</LinearLayout>



