<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about_us"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/Widget.MyApp.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="     Yuetsen is an application that helps you to stretch in the working time. The purpose is to prevent user sitting in front of a computer for a long time that can cause eye problems and office syndrome. This application will alert and show gesture to a user to follow how to stretch and the user can change gesture. This taking a little time to stretch for a good health."
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/origin"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="     The daily ,Most working in the office often have to well for that long such as focusing screen for longer than one hour ,Often the problem with the table and chair doesn't sit comfortably. These are the source of the disease is called Office Syndrome "
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18dp"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/benefit"
                    android:layout_marginLeft="20dp"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="     The benefits of the application
                        1 Protect for (Office Syndrome)
                        2 The body works well because well muscle
                        3 Helping and Develop personality
                        4 Reduce stress in working "
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18dp"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit"
                    android:layout_marginLeft="20dp"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="     Augmentis Company Thailand."
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18dp"/>



            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>