<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_set_time_1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/Widget.MyApp.ActionBar" />


    <Button
        android:id="@+id/enter_working"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/confirm"
        android:background="@color/colorAccent"
        android:layout_margin="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        />

    <LinearLayout
        android:id="@+id/view_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="?android:listSeparatorTextViewStyle"
            android:layout_marginTop="60dp"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <ImageView
                    android:layout_marginLeft="8dp"
                    android:layout_width="24sp"
                    android:layout_height="29sp"
                    android:src="@drawable/time_morning"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/text_view_morning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_show"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Set time for working"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                >

                <Button
                    android:id="@+id/button_time_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/start"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorAccent"
                    />




                <Button
                    android:id="@+id/button_time_out"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/finish"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorAccent"
                    />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            style="?android:listSeparatorTextViewStyle"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="15dp">

                    <ImageView
                        android:layout_width="24sp"
                        android:layout_height="28sp"
                        android:src="@drawable/calendar"/>

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Set day in working"
                        android:textSize="25sp"/>

                </LinearLayout>






            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:orientation="vertical"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Set day for working "
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <CheckBox
                        android:id="@+id/sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sunday"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <CheckBox
                        android:id="@+id/monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Monday"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tuesday"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wednesday"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <CheckBox
                        android:id="@+id/thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thursday"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <CheckBox
                        android:id="@+id/friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Friday"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Saturday"/>

                </LinearLayout>

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="?android:listSeparatorTextViewStyle"
            android:layout_marginTop="5dp"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >


                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="29sp"
                    android:src="@drawable/alarm"
                    />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:id="@+id/notification_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_working"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="23dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set alert for notification"
                    />
            </LinearLayout>

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:layout_marginTop="7dp"
                android:id="@+id/alert_seek_edit"
                app:dsb_min="30"
                app:dsb_max="60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
